--- a/rick_and_morty_app/src/index.css
+++ b/rick_and_morty_app/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
   font-family: monospace;
+  background-image: url('https://i1.wp.com/wallur.com/wp-content/uploads/2016/12/rick-morty-background-14.png?w=1920');
+  
 }
 
