--- a/rick_and_morty_app/src/components/Characters/Characters.module.css
+++ b/rick_and_morty_app/src/components/Characters/Characters.module.css
@@ -1,14 +1,13 @@
-.Characters__pagination_wrapper{
+.pagination_wrapper{
 display: flex;
 margin-top: 40px;
 }
-
-.Characters__pagination{
+.pagination{
     display: flex;
     margin: 0 auto;
 }
 
-.Characters__pagination>li{
+.pagination>li{
     list-style: none;
 }
 /* .Characters__pagination:first-child:first-child{
@@ -26,12 +25,12 @@ margin-top: 40px;
     color: white;
 }
 
-.Characters__pagination>li>button{
+.pagination>li>button{
     height: 30px;
     border: none;
     
 }
-.Characters__pagination>li>button:hover{
+.pagination>li>button:hover{
     background-color: lightgreen;
 }
 
@@ -43,7 +42,7 @@ margin-top: 40px;
     background-color:white;
     color:#2e2f30;
 }
-.Characters__wrapper{
+.wrapper{
     display: flex;
     flex-wrap: wrap;
     width: 70%;
