--- a/rick_and_morty_app/src/components/Header/Header.module.css
+++ b/rick_and_morty_app/src/components/Header/Header.module.css
@@ -1,4 +1,4 @@
-.Header__wrapper{
+.wrapper{
     background-color:#181717;
     color: white;
     display: flex;
@@ -7,7 +7,7 @@
 
 }
 
-.Header__title{
+.title{
     margin: 0px;
     font-family: 'Sriracha', cursive;
     font-size: 25px;
