--- a/rick_and_morty_app/src/index.css
+++ b/rick_and_morty_app/src/index.css
@@ -1,8 +1,10 @@
 body {
   margin: 0;
   font-family: monospace;
-  background-image: url('https://cdn.shopify.com/s/files/1/0191/7850/products/RICKMORTY_V4_HC_-_COMP_FNL_WEB_1200x1200.jpg?v=1570640040'); 
-  background-repeat: no-repeat;
-  background-size: cover;
+  height: 100vh;
+}
+
+#root{
+  height: 100vh;
 }
 
