--- a/rick_and_morty_app/src/App.css
+++ b/rick_and_morty_app/src/App.css
@@ -1,10 +1,16 @@
 .App {
   text-align: center;
+  height: 100vh;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
 @media (prefers-reduced-motion: no-preference) {
