--- a/rick_and_morty_app/src/components/CardView/CardView.module.css
+++ b/rick_and_morty_app/src/components/CardView/CardView.module.css
@@ -23,7 +23,9 @@
     font-size: 20px;
     font-family: 'Sriracha', cursive;
 }
-
+.title_button>h4>a{
+text-decoration: none;
+}
 .title_button>button:hover{
     background-color: rgb(13, 175, 86);
 }
