--- a/rick_and_morty_app/src/components/Footer/Footer.module.css
+++ b/rick_and_morty_app/src/components/Footer/Footer.module.css
@@ -1,11 +1,8 @@
-.wrapper{
+.footer{
     background-color:#000000f5;
     color: white;
-    display: flex;
-    padding: 10px;
-    padding-left: 70px;
+    height: 50px;
 }
-
 .title{
     margin: 0px;
     font-family: 'Sriracha', cursive;
